Related: fdo#50640 allow the cursor to enter empty vertical input fields

Change-Id: Ib7db10d59f6d1106b33558fe5bdd076e278dfbbe